tests/paczka1/fuzzy1/29744264.err
Error in line 3: Ye8H6 A416 94,6
Error in line 11: HDiNr5 A1?? 52,4
Error in line 4: mIpEE A416 27,1
Error in line 9: HDiNr5 A166 91,0
Error in line 16: mIpEE A97 21,7
Error in line 28: 8dEAUFWSFcO A97 21,5
